crates/v1/tautcore-core/src/layout/snapshots/tautcore_core__layout__snapshot_tests__tests__architecture_groups_snapshot.snap
---
source: crates/tautcore-core/src/layout/snapshot_tests.rs
expression: summary
---
{
  "canvas_h": 526.0,
  "canvas_w": 396.0,
  "nodes": [
    {
      "h": 50.0,
      "id": "api",
      "w": 112.0,
      "x": 70.0,
      "y": 284.0
    },
    {
      "h": 50.0,
      "id": "db",
      "w": 112.0,
      "x": 70.0,
      "y": 406.0
    },
    {
      "h": 50.0,
      "id": "mobile",
      "w": 112.0,
      "x": 214.0,
      "y": 86.0
    },
    {
      "h": 50.0,
      "id": "web",
      "w": 112.0,
      "x": 70.0,
      "y": 86.0
    }
  ]
}
