crates/v1/tautcore-core/src/layout/snapshots/tautcore_core__layout__snapshot_tests__tests__flowchart_diamond_snapshot.snap
---
source: crates/tautcore-core/src/layout/snapshot_tests.rs
expression: summary
---
{
  "canvas_h": 404.0,
  "canvas_w": 368.0,
  "nodes": [
    {
      "h": 50.0,
      "id": "check",
      "w": 112.0,
      "x": 128.0,
      "y": 158.0
    },
    {
      "h": 50.0,
      "id": "no",
      "w": 112.0,
      "x": 206.0,
      "y": 304.0
    },
    {
      "h": 50.0,
      "id": "start",
      "w": 112.0,
      "x": 128.0,
      "y": 50.0
    },
    {
      "h": 50.0,
      "id": "yes",
      "w": 112.0,
      "x": 50.0,
      "y": 304.0
    }
  ]
}
